--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">Sample Java App</string>
     <string name="toast_button">Toast</string>
     <string name="count_button">Count</string>
+    <string name="count_text">0</string>
     <string name="random_button">Random</string>
+    <string name="random_heading">Here is a random number between 0 and %d</string>
+    <string name="random_text">R</string>
 </resources>
